fixed overflow issues on superhero container

--- a/css/ramshackle-2.css
+++ b/css/ramshackle-2.css
@@ -40,14 +40,14 @@ weight: normal; font-style: normal; }
 .superhero {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     align-content: center;
     justify-content: flex-start;
     width: 100vw;
     max-width: 100%;
-    height: 100vh;
-    min-height: 100%;
+    height: 100%;
+    min-height: 100vh;
     background-image: url('../img/hero.jpg');
     background-repeat: repeat;
     background-position: center;
@@ -163,9 +163,9 @@ h6 { font-size: 1.3em; }
     margin: 25px auto;
 }
 
-.btn + .btn {
+/*.btn + .btn {
     margin-left: 15px;
-}
+}*/
 
 .btn:hover {
     top: 2px;
@@ -567,6 +567,7 @@ thead tr:first-child:hover {
 
 .tag {
     display: inline-flex;
+    cursor: default;
     font-size: .9em;
     font-weight: bold;
     line-height: 1.55em;
